Cropped image in header fixed, close #23

--- a/src/components/Navbar/navbar.module.scss
+++ b/src/components/Navbar/navbar.module.scss
@@ -2,6 +2,7 @@
 
 .navbar {
   &__container {
+    z-index: -100;
     width: 100%;
     position: absolute;
     top: 0;
